# Lab7

./: .gitignore  CMakeLists.txt  Protocol.h  ReadWrite.h  Serialize.h  Server.cpp  binary.cpp  binary.h  dto.cpp  dto.h  main.cpp  main_client.cpp  main_serialize_test.cpp  main_server.cpp  main_wtf.cpp  protocol.h  serialize.cpp
